fix: vertically center wrapped initial characters

--- a/Main/styles/quiz/_solve.scss
+++ b/Main/styles/quiz/_solve.scss
@@ -46,6 +46,7 @@ article {
             display: inline-flex;
             flex-direction: row;
             align-items: center;
+            justify-content: center;
             flex-wrap: wrap;
             gap: 5px;
             font-size: 1.5em;
